--- a/home.html
+++ b/home.html
@@ -49,6 +49,7 @@
                             <li><a href="#"><i class="fa fa-user s_color"></i> My Account</a></li>
                             <li><a href="#"><i class="fas fa-location-arrow"></i> Our location</a></li>
                             <li><a href="contact-us.html"><i class="fas fa-headset"></i> Contact Us</a></li>
+                            <li><a href="weather.html"><i class="fas fa-headset"></i>Current Weather</a></li>
                         </ul>
                     </div>
                 </div>
@@ -115,6 +116,8 @@
                     <ul class="nav navbar-nav ml-auto" data-in="fadeInDown" data-out="fadeOutUp">
                         <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="farmerhelper.html">FarmerHelper</li>
+                            
                         <li class="dropdown">
                             <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">SHOP</a>
                             <ul class="dropdown-menu">
@@ -127,6 +130,7 @@
                             </ul>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                        <li class="nav-item"><a class="nav-link" href="forum.html">Forum</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
@@ -285,6 +289,25 @@
             </div>
         </div>
     </div>
+<!-- video sec -->
+<div class="video-sections">
+    <div class="container">
+        <div class="row">
+            <!-- Left Video Section -->
+            <div class="col-lg-6">
+                <div class="video-box">
+                    <iframe width="100%" height="315" src="VIDEO/vid.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+            <!-- Right Video Section -->
+            <div class="col-lg-6">
+                <div class="video-box">
+                    <iframe width="100%" height="315" src="VIDEO/vid.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
     <!-- Start Products  -->
     <div class="products-box">
