--- a/farmerhelperabout.html
+++ b/farmerhelperabout.html
@@ -14,7 +14,7 @@
         <h2 class="featurette-heading fw-normal lh-1 text-center">Tractor <span class="text-muted">:-</span></h2>
         <h4> Product Name</h4>
         <span> Owner Name:-Ashish Kumar</span> <br>
-        <span> Location:-Bihar</span>  <br>
+        <span> Location:-Theni</span>  <br>
         <span> Contact:-9334340856</span>  <br> 
         <span> Available:-9/11/22</span>  <br>
         <span> Cost:-400rs/hour</span>  <br> 
@@ -27,7 +27,7 @@
         <h2 class="featurette-heading fw-normal lh-1 text text-center">Tractor With Cultivater <span class="text-muted"></span></h2>
         <h4> Product Name</h4>
         <span> Owner Name:-Anant Raj</span> <br>
-        <span> Location:-Bihar</span>  <br>
+        <span> Location:-Madurai</span>  <br>
         <span> Contact:-9300340856</span>  <br>
         <span> Available:-9/11/22</span>  <br>
         <span> Cost:-300rs/hour</span>  <br> 
@@ -40,7 +40,7 @@
         <h2 class="featurette-heading fw-normal lh-1 text-center">Harvester <span class="text-muted">:-</span></h2>
         <h4> Product Name</h4>
         <span> Owner Name:-ShivShakar Pandit </span> <br>
-        <span> Location:-Bihar</span>  <br>
+        <span> Location:-Chennai</span>  <br>
         <span> Contact:-9334000856</span>  <br> 
         <span> Available:-9/11/22</span>  <br>
         <span> Cost:-250rs/hour</span>  <br>
@@ -53,7 +53,7 @@
         <h2 class="featurette-heading fw-normal lh-1 text-center">Threshing Machine <span class="text-muted">:-</span></h2>
         <h4> Product Name</h4>
         <span> Owner Name:-Ankit Kumar</span> <br>
-        <span> Location:-Bihar</span>  <br>
+        <span> Location:-Theni</span>  <br>
         <span> Contact:-9334340856</span>  <br>
         <span> Available:-9/11/22</span>  <br>
         <span> Cost:-150rs/hour</span>  <br> 
@@ -66,7 +66,7 @@
         <h2 class="featurette-heading fw-normal lh-1 text-center">Threshing <span class="text-muted">:-</span></h2>
         <h4> Product Name</h4>
         <span> Owner Name:-Aman jha</span> <br>
-        <span> Location:-Bihar</span>  <br>
+        <span> Location:-Dindigul</span>  <br>
         <span> Contact:-9734340856</span>  <br> 
         <span> Available:-9/11/22</span>  <br>
         <span> Cost:-500rs/hour</span>  <br>
@@ -79,7 +79,7 @@
         <h2 class="featurette-heading fw-normal lh-1 text-center">Threshing Machine <span class="text-muted">:-</span></h2>
         <h4> Product Name</h4>
         <span> Owner Name:-Rishabh Kumar</span> <br>
-        <span> Location:-Bihar</span>  <br>
+        <span> Location:-Theni</span>  <br>
         <span> Contact:-9534340856</span>  <br>
         <span> Available:-9/11/22</span>  <br>
         <span> Cost:-350rs/hour</span>  <br>
@@ -92,7 +92,7 @@
         <h2 class="featurette-heading fw-normal lh-1 text-center">Cultivator  <span class="text-muted">:-</span></h2>
         <h4> Product Name</h4>
         <span> Owner Name:-Gaurav Kumar</span> <br>
-        <span> Location:-Bihar</span>  <br>
+        <span> Location:-Chennai</span>  <br>
         <span> Contact:-9934340856</span>  <br>
         <span> Available:-9/11/22</span>  <br>              
         <span> Cost:-150rs/hour</span>  <br>
